--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@ document.addEventListener("DOMContentLoaded", function () {
   const contactForm = document.getElementById("contact-form");
   contactForm.addEventListener("submit", function (e) {
     e.preventDefault();
-    const adminEmail = "admin@example.com"; // Replace with your admin email
+    const adminEmail = "rishirohankalapala@gmail.com"; // Replace with your admin email
     const formData = {
       name: document.getElementById("name").value,
       email: document.getElementById("email").value,
