--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@ html {scroll-behavior: smooth;}
 tailwind.config = {
   theme: {
     extend: {
-      colors: { primary: "#F90909", secondary: "#f59e0b" },
+      colors: {
+        primary: "#F90909",
+        secondary: "#3b82f6",
+        dark: {
+          DEFAULT: "#0f172a",
+          light: "#1e293b",
+          lighter: "#334155",
+        },
+      },
       borderRadius: {
         none: "0px",
         sm: "8px",
@@ -40,6 +48,101 @@ tailwind.config = {
 </script>
 </head>
 <body class="bg-gray-900 font-['Inter'] text-gray-100">
+<style>
+:root {
+color-scheme: dark;
+}
+body {
+background: linear-gradient(to bottom, #0f172a, #1e293b);
+color: #f3f4f6;
+}
+.bg-white {
+background-color: #1e293b !important;
+}
+.bg-gray-800 {
+background-color: #0f172a !important;
+}
+.bg-gray-900 {
+background-color: #0f172a !important;
+}
+.text-gray-600 {
+color: #94a3b8 !important;
+}
+.text-gray-400 {
+color: #cbd5e1 !important;
+}
+.border-gray-100 {
+border-color: #1e293b !important;
+}
+.border-gray-200 {
+border-color: #334155 !important;
+}
+.border-gray-700 {
+border-color: #334155 !important;
+}
+.border-gray-800 {
+border-color: #1e293b !important;
+}
+.hover\:bg-gray-50:hover {
+background-color: #334155 !important;
+}
+.hover\:bg-gray-800:hover {
+background-color: #1e293b !important;
+}
+.bg-white\/10 {
+background-color: rgba(255, 255, 255, 0.1) !important;
+}
+.bg-white\/20 {
+background-color: rgba(255, 255, 255, 0.2) !important;
+}
+.bg-white\/5 {
+background-color: rgba(255, 255, 255, 0.05) !important;
+}
+.bg-black\/50 {
+background-color: rgba(0, 0, 0, 0.5) !important;
+}
+.bg-black\/90 {
+background-color: rgba(0, 0, 0, 0.9) !important;
+}
+.bg-black\/95 {
+background-color: rgba(0, 0, 0, 0.95) !important;
+}
+.shadow-lg {
+box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.5), 0 4px 6px -2px rgba(0, 0, 0, 0.25) !important;
+}
+.shadow-xl {
+box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.5), 0 10px 10px -5px rgba(0, 0, 0, 0.25) !important;
+}
+input, textarea, select {
+background-color: #1e293b !important;
+color: #f3f4f6 !important;
+border-color: #334155 !important;
+}
+input::placeholder, textarea::placeholder {
+color: #94a3b8 !important;
+}
+input:focus, textarea:focus, select:focus {
+border-color: var(--primary-color) !important;
+box-shadow: 0 0 0 2px rgba(249, 9, 9, 0.2) !important;
+}
+.backdrop-blur-sm {
+backdrop-filter: blur(8px) !important;
+}
+::-webkit-scrollbar {
+width: 8px;
+height: 8px;
+}
+::-webkit-scrollbar-track {
+background: #1e293b;
+}
+::-webkit-scrollbar-thumb {
+background: #334155;
+border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+background: #475569;
+}
+</style>
 <header class="fixed top-0 left-0 right-0 z-50 bg-gray-900/90 backdrop-blur-sm border-b border-gray-800">
 <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
 <a href="#" class="text-2xl font-['Caveat'] font-bold text-primary">logo</a>
@@ -120,79 +223,106 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 </header>
-<section id="home" class="min-h-screen pt-24 relative overflow-hidden bg-gradient-to-br from-gray-900 to-gray-800">
-<div class="absolute inset-0 bg-[url('https://public.readdy.ai/ai/img_res/48350a66dae29cb61b13ffa2c3e8a48a.jpg')] bg-cover bg-center opacity-10"></div>
-<div class="absolute inset-0 bg-gradient-to-b from-white/80 to-transparent"></div>
+<section id="home" class="min-h-screen pt-24 relative overflow-hidden bg-gradient-to-br from-gray-900 via-gray-800 to-black">
+<div class="absolute inset-0 bg-[url('https://public.readdy.ai/ai/img_res/bc8d7db1249ff88373c123bc5d88ef26.jpg')] bg-cover bg-center opacity-20"></div>
+<div class="absolute inset-0 bg-gradient-to-b from-black/80 via-transparent to-black/80"></div>
 <div class="container mx-auto px-6 relative">
-<div class="grid grid-cols-1 lg:grid-cols-2 gap-16 min-h-[80vh] items-center py-12">
-<div class="space-y-10 text-center lg:text-left relative z-10">
-<div class="inline-flex items-center px-6 py-2.5 bg-white shadow-lg !rounded-full text-sm font-medium mx-auto lg:mx-0 border border-gray-100">
-<span class="animate-pulse w-2 h-2 bg-primary rounded-full mr-2"></span>
-<span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Available for Creative Projects</span>
-</div>
+<div class="flex flex-col lg:flex-row items-center justify-between gap-16 min-h-[80vh] py-12">
+<div class="w-full lg:w-1/2 relative">
+<div class="absolute -inset-4 bg-gradient-to-r from-primary/20 to-secondary/20 rounded-full blur-3xl animate-pulse"></div>
+<div class="relative space-y-8">
+<div class="flex items-center gap-4 mb-8">
 <div class="relative">
-<div class="absolute -inset-1 bg-gradient-to-r from-primary to-secondary opacity-30 blur"></div>
-<h1 class="relative text-4xl md:text-5xl xl:text-6xl font-bold leading-tight">
-<span class="block mb-2">Crafting</span>
-<span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Digital Magic</span>
-</h1>
-<p class="mt-8 text-lg text-gray-600 leading-relaxed max-w-2xl mx-auto lg:mx-0">
-Transforming visionary ideas into extraordinary digital experiences through innovative design and cutting-edge development.
-</p>
+<div class="w-3 h-3 bg-primary rounded-full animate-ping absolute"></div>
+<div class="w-3 h-3 bg-primary rounded-full relative"></div>
 </div>
-<div class="flex flex-col sm:flex-row gap-6 justify-center lg:justify-start">
-<a href="#projects" class="group relative inline-flex items-center justify-center px-8 py-4 bg-primary text-white overflow-hidden !rounded-2xl transition-all duration-300 hover:scale-105 shadow-xl hover:shadow-primary/20">
-<div class="absolute inset-0 w-full h-full bg-gradient-to-r from-primary to-secondary opacity-0 group-hover:opacity-100 transition-opacity"></div>
-<span class="relative flex items-center">
-View Portfolio
-<i class="ri-arrow-right-line ml-2 transition-transform group-hover:translate-x-1"></i>
+<div class="px-6 py-2 bg-white/5 backdrop-blur-sm !rounded-full border border-white/10">
+<span class="text-sm font-medium bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Available for Creative Projects</span>
+</div>
+</div>
+<h1 class="text-5xl lg:text-7xl font-bold leading-tight">
+<span class="relative inline-block">
+<span class="absolute inset-0 bg-gradient-to-r from-primary to-secondary blur-2xl opacity-30"></span>
+<span class="relative">Crafting</span>
+</span>
+<span class="block mt-2 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Digital Dreams</span>
+</h1>
+<p class="text-xl text-gray-400 leading-relaxed max-w-2xl">
+Where imagination meets innovation. We transform visionary ideas into extraordinary digital experiences that captivate and inspire.
+</p>
+<div class="flex flex-wrap gap-6 mt-12">
+<a href="#projects" class="group relative inline-flex items-center justify-center px-8 py-4 bg-transparent overflow-hidden !rounded-2xl transition-all duration-500">
+<div class="absolute inset-0 bg-gradient-to-r from-primary to-secondary opacity-20"></div>
+<div class="absolute inset-0.5 bg-gray-900 !rounded-2xl"></div>
+<div class="absolute inset-0 bg-gradient-to-r from-primary to-secondary opacity-0 group-hover:opacity-20 transition-opacity duration-500"></div>
+<span class="relative flex items-center text-white font-medium">
+Explore Portfolio
+<i class="ri-arrow-right-line ml-2 transform group-hover:translate-x-1 transition-transform"></i>
 </span>
 </a>
-<a href="#contact" class="group inline-flex items-center justify-center px-8 py-4 bg-white border-2 border-gray-100 text-gray-700 !rounded-2xl hover:border-primary hover:text-primary transition-all duration-300 hover:scale-105 shadow-lg hover:shadow-xl">
+<a href="#contact" class="group inline-flex items-center justify-center px-8 py-4 bg-white/5 backdrop-blur-sm border border-white/10 text-white !rounded-2xl hover:bg-white/10 transition-all duration-300">
 <i class="ri-mail-line mr-2"></i>
-<span>Let's Talk</span>
+<span>Let's Connect</span>
 </a>
 </div>
-<div class="grid grid-cols-3 gap-6 mt-12">
-<div class="bg-white shadow-xl !rounded-2xl p-6 transform hover:-translate-y-2 transition-all duration-300">
-<i class="ri-award-line text-3xl text-primary mb-4"></i>
-<div class="font-bold text-3xl text-gray-900">5+</div>
-<div class="text-sm text-gray-600 mt-1">Years of Excellence</div>
+<div class="grid grid-cols-3 gap-6 mt-16">
+<div class="bg-white/5 backdrop-blur-sm !rounded-2xl p-6 border border-white/10 transform hover:-translate-y-2 transition-all duration-300">
+<div class="w-12 h-12 bg-primary/10 !rounded-xl flex items-center justify-center mb-4">
+<i class="ri-award-line text-2xl text-primary"></i>
 </div>
-<div class="bg-white shadow-xl !rounded-2xl p-6 transform hover:-translate-y-2 transition-all duration-300">
-<i class="ri-customer-service-line text-3xl text-primary mb-4"></i>
-<div class="font-bold text-3xl text-gray-900">100+</div>
-<div class="text-sm text-gray-600 mt-1">Happy Clients</div>
+<div class="font-bold text-3xl text-white">5+</div>
+<div class="text-sm text-gray-400 mt-1">Years of Excellence</div>
 </div>
-<div class="bg-white shadow-xl !rounded-2xl p-6 transform hover:-translate-y-2 transition-all duration-300">
-<i class="ri-rocket-line text-3xl text-primary mb-4"></i>
-<div class="font-bold text-3xl text-gray-900">250+</div>
-<div class="text-sm text-gray-600 mt-1">Projects Launched</div>
+<div class="bg-white/5 backdrop-blur-sm !rounded-2xl p-6 border border-white/10 transform hover:-translate-y-2 transition-all duration-300">
+<div class="w-12 h-12 bg-primary/10 !rounded-xl flex items-center justify-center mb-4">
+<i class="ri-customer-service-line text-2xl text-primary"></i>
+</div>
+<div class="font-bold text-3xl text-white">100+</div>
+<div class="text-sm text-gray-400 mt-1">Happy Clients</div>
+</div>
+<div class="bg-white/5 backdrop-blur-sm !rounded-2xl p-6 border border-white/10 transform hover:-translate-y-2 transition-all duration-300">
+<div class="w-12 h-12 bg-primary/10 !rounded-xl flex items-center justify-center mb-4">
+<i class="ri-rocket-line text-2xl text-primary"></i>
+</div>
+<div class="font-bold text-3xl text-white">250+</div>
+<div class="text-sm text-gray-400 mt-1">Projects Launched</div>
 </div>
 </div>
 </div>
+</div>
+<div class="w-full lg:w-1/2 relative">
+<div class="absolute -inset-4 bg-gradient-to-r from-primary/30 to-secondary/30 rounded-[3rem] blur-3xl"></div>
 <div class="relative">
-<div class="absolute -inset-4 bg-gradient-to-r from-primary to-secondary opacity-30 blur-3xl rounded-full"></div>
-<div class="relative bg-white !rounded-3xl p-8 shadow-2xl">
-<img src="https://public.readdy.ai/ai/img_res/6dc5440162af503b696fbc0f30d9770f.jpg"
-alt="Creative Workspace"
-class="w-full h-[600px] object-cover !rounded-2xl shadow-lg transform hover:scale-[1.02] transition-transform duration-500">
-<div class="absolute top-4 left-4 bg-white/90 backdrop-blur-sm !rounded-2xl shadow-lg p-4 flex items-center gap-4">
-<div class="w-12 h-12 bg-primary/10 !rounded-xl flex items-center justify-center">
-<i class="ri-magic-line text-2xl text-primary"></i>
+<div class="aspect-[4/3] overflow-hidden !rounded-[2rem] border border-white/10 shadow-2xl">
+<img src="https://public.readdy.ai/ai/img_res/b0f5d5b902d407b339559a7dfaaa8405.jpg"
+alt="Creative Interface"
+class="w-full h-full object-cover">
+<div class="absolute inset-0 bg-gradient-to-t from-black/60 via-transparent to-transparent"></div>
+</div>
+<div class="absolute -bottom-8 -left-8">
+<div class="bg-white/10 backdrop-blur-md !rounded-2xl p-4 border border-white/10 shadow-xl">
+<div class="flex items-center gap-4">
+<div class="w-12 h-12 bg-primary/20 !rounded-xl flex items-center justify-center">
+<i class="ri-code-box-line text-2xl text-primary"></i>
 </div>
 <div>
-<div class="font-bold">Creative Process</div>
-<div class="text-sm text-gray-600">Design & Innovation</div>
+<div class="text-white font-medium">Innovation Hub</div>
+<div class="text-sm text-gray-400">Next-Gen Solutions</div>
 </div>
 </div>
-<div class="absolute bottom-4 right-4 bg-white/90 backdrop-blur-sm !rounded-2xl shadow-lg p-4 flex items-center gap-4">
-<div class="w-12 h-12 bg-secondary/10 !rounded-xl flex items-center justify-center">
-<i class="ri-code-box-line text-2xl text-secondary"></i>
+</div>
+</div>
+<div class="absolute -top-8 -right-8">
+<div class="bg-white/10 backdrop-blur-md !rounded-2xl p-4 border border-white/10 shadow-xl">
+<div class="flex items-center gap-4">
+<div class="w-12 h-12 bg-secondary/20 !rounded-xl flex items-center justify-center">
+<i class="ri-magic-line text-2xl text-secondary"></i>
 </div>
 <div>
-<div class="font-bold">Tech Stack</div>
-<div class="text-sm text-gray-600">Modern & Scalable</div>
+<div class="text-white font-medium">Creative Lab</div>
+<div class="text-sm text-gray-400">Design Excellence</div>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -741,7 +871,6 @@ document.addEventListener("DOMContentLoaded", function () {
 <h2 class="text-4xl sm:text-5xl font-bold mb-4">Let's Create Something <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Extraordinary</span></h2>
 <p class="text-gray-400 max-w-2xl mx-auto">Transform your vision into reality with our creative expertise. We're here to help you build something amazing.</p>
 </div>
-
 <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
 <div class="lg:col-span-4 space-y-6">
 <div class="bg-gray-800/50 backdrop-blur-sm p-8 !rounded-2xl border border-gray-700/50">
@@ -802,7 +931,6 @@ document.addEventListener("DOMContentLoaded", function () {
 </div>
 </div>
 </div>
-
 <div class="lg:col-span-8">
 <div class="bg-gray-800/50 backdrop-blur-sm p-8 !rounded-2xl border border-gray-700/50">
 <form id="contact-form" class="space-y-6">
@@ -820,7 +948,6 @@ document.addEventListener("DOMContentLoaded", function () {
 </div>
 </div>
 </div>
-
 <div class="relative group">
 <div class="absolute inset-0 bg-gradient-to-r from-primary/20 to-secondary/20 !rounded-xl -rotate-6 scale-95 opacity-0 group-focus-within:opacity-100 transition-all duration-300"></div>
 <div class="relative">
@@ -836,14 +963,12 @@ document.addEventListener("DOMContentLoaded", function () {
 </div>
 </div>
 </div>
-
 <div class="relative group">
 <div class="absolute inset-0 bg-gradient-to-r from-primary/20 to-secondary/20 !rounded-xl -rotate-6 scale-95 opacity-0 group-focus-within:opacity-100 transition-all duration-300"></div>
 <div class="relative">
 <textarea id="message" rows="6" class="w-full px-5 py-4 bg-gray-700/50 !rounded-xl text-white border-none focus:ring-2 focus:ring-primary/20 resize-none" placeholder="Your Message" required></textarea>
 </div>
 </div>
-
 <div class="flex items-start gap-2 group">
 <div class="relative w-6 h-6 flex-shrink-0 mt-0.5">
 <input type="checkbox" id="privacy" class="absolute opacity-0 w-full h-full cursor-pointer">
@@ -856,7 +981,6 @@ document.addEventListener("DOMContentLoaded", function () {
 I agree to the <a href="#" class="text-primary hover:underline">Privacy Policy</a> and <a href="#" class="text-primary hover:underline">Terms of Service</a>
 </label>
 </div>
-
 <button type="submit" class="group relative w-full overflow-hidden px-8 py-4 bg-gradient-to-r from-primary to-secondary !rounded-xl text-white font-medium hover:shadow-lg hover:shadow-primary/20 transition-all duration-300">
 <span class="absolute inset-0 bg-white/20 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></span>
 <span class="relative flex items-center justify-center gap-2">
@@ -868,21 +992,19 @@ Send Message
 </div>
 </div>
 </div>
-
 <div class="mt-20">
 <div class="bg-gray-800/50 backdrop-blur-sm !rounded-2xl border border-gray-700/50 overflow-hidden">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0637507774427!2d-122.41941658467737!3d37.77492977975835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c6c8f4459%3A0xb10ed6d9b5050fa5!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1566568143285!5m2!1sen!2sus" 
-width="100%" 
-height="400" 
-style="border:0;" 
-allowfullscreen="" 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0637507774427!2d-122.41941658467737!3d37.77492977975835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c6c8f4459%3A0xb10ed6d9b5050fa5!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1566568143285!5m2!1sen!2sus"
+width="100%"
+height="400"
+style="border:0;"
+allowfullscreen=""
 loading="lazy"
 class="grayscale contrast-125 opacity-75"></iframe>
 </div>
 </div>
 </div>
 </div>
-
 <div id="success-modal" class="fixed inset-0 bg-black/50 backdrop-blur-sm hidden items-center justify-center z-50">
 <div class="bg-gray-800 !rounded-2xl p-8 max-w-md w-full mx-4">
 <div class="text-center">
@@ -897,7 +1019,6 @@ Close
 </div>
 </div>
 </div>
-
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   const form = document.getElementById("contact-form");
@@ -905,7 +1026,6 @@ document.addEventListener("DOMContentLoaded", function () {
   const closeModalBtn = successModal.querySelector(".close-modal");
   const privacyCheckbox = document.getElementById("privacy");
   const submitBtn = form.querySelector('button[type="submit"]');
-
   form.addEventListener("submit", function (e) {
     e.preventDefault();
     if (!privacyCheckbox.checked) {
@@ -923,17 +1043,14 @@ document.addEventListener("DOMContentLoaded", function () {
     successModal.style.display = "flex";
     form.reset();
   });
-
   closeModalBtn.addEventListener("click", function () {
     successModal.style.display = "none";
   });
-
   successModal.addEventListener("click", function (e) {
     if (e.target === successModal) {
       successModal.style.display = "none";
     }
   });
-
   privacyCheckbox.addEventListener("change", function () {
     const checkIcon = this.parentElement.querySelector(".ri-check-line");
     if (this.checked) {
@@ -942,7 +1059,6 @@ document.addEventListener("DOMContentLoaded", function () {
       checkIcon.style.opacity = "0";
     }
   });
-
   const serviceSelect = document.getElementById("service");
   serviceSelect.addEventListener("change", function () {
     if (this.value) {
