--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Digital <span class="text-primary">Designer</span>
 <img src="https://public.readdy.ai/ai/img_res/7b295cd4de9af9cd60107607fe470ae4.jpg" class="w-full shadow-2xl" alt="iPhone">
 <div class="absolute inset-[2%] top-[1%] bottom-[2%] rounded-[55px] overflow-hidden bg-gray-900">
 <video class="w-full h-full object-cover" autoplay loop muted playsinline>
-<source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+<source src="StartUp Ideas.mp4" type="video/mp4">
 </video>
 </div>
 </div>
@@ -232,7 +232,7 @@ Digital <span class="text-primary">Designer</span>
 <img src="https://public.readdy.ai/ai/img_res/d6e6536300e244c92e05cba5929555cd.jpg" class="w-full shadow-2xl" alt="iPhone">
 <div class="absolute inset-[2%] top-[1%] bottom-[2%] rounded-[55px] overflow-hidden bg-gray-900">
 <video class="w-full h-full object-cover" autoplay loop muted playsinline>
-<source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+<source src="Microsoft. (1).mp4" type="video/mp4">
 </video>
 </div>
 </div>
@@ -242,7 +242,7 @@ Digital <span class="text-primary">Designer</span>
 <img src="https://public.readdy.ai/ai/img_res/5675db735b7f4e24c524c7253c9058ef.jpg" class="w-full shadow-2xl" alt="iPhone">
 <div class="absolute inset-[2%] top-[1%] bottom-[2%] rounded-[55px] overflow-hidden bg-gray-900">
 <video class="w-full h-full object-cover" autoplay loop muted playsinline>
-<source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+<source src="Royal Kludge.mp4" type="video/mp4">
 </video>
 </div>
 </div>
