--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <header class="min-h-screen relative overflow-hidden flex items-center bg-gray-900">
 <div class="absolute inset-0 z-0">
 <div class="absolute inset-0 bg-[linear-gradient(45deg,rgba(26,115,232,0.15),rgba(26,115,232,0.05))]"></div>
-<img src="nav.png" class="w-full h-full object-cover opacity-40">
+<img src="nav001.png" class="w-full h-full object-cover opacity-40">
 </div>
 <div class="absolute inset-0 bg-gradient-to-r from-gray-900/90 via-gray-900/80 to-transparent z-10"></div>
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-20">
