--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Digital <span class="text-primary">Designer</span>
 <img src="https://public.readdy.ai/ai/img_res/fa19c64b6e5195b36af3bde4ad5b44f6.jpg" class="w-full rounded-lg shadow-2xl" alt="MacBook">
 <div class="absolute inset-[3%] top-[2%] rounded-lg overflow-hidden bg-gray-900">
 <video class="w-full h-full object-cover" autoplay loop muted playsinline>
-<source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+<source src="Apple Watch Ultra (1).mp4" type="video/mp4">
 </video>
 </div>
 </div>
